@@ -1,11 +1,10 @@
 package uk.gov.ida.hub.config.domain.filters;
 
-import com.google.common.base.Predicate;
-import com.google.common.collect.ImmutableList;
 import org.junit.Test;
 import uk.gov.ida.hub.config.domain.IdentityProviderConfig;
 
 import java.util.List;
+import java.util.function.Predicate;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static uk.gov.ida.hub.config.domain.builders.IdentityProviderConfigDataBuilder.anIdentityProviderConfigData;
@@ -20,7 +19,7 @@ public class OnboardingForTransactionEntityPredicateTest {
         IdentityProviderConfig nonOnboardingIdp = anIdentityProviderConfigData()
                 .build();
 
-        assertThat(onboardingPredicate.apply(nonOnboardingIdp)).isTrue();
+        assertThat(onboardingPredicate.test(nonOnboardingIdp)).isTrue();
     }
 
     @Test
@@ -29,22 +28,22 @@ public class OnboardingForTransactionEntityPredicateTest {
         Predicate<IdentityProviderConfig> onboardingPredicate = new OnboardingForTransactionEntityPredicate(transactionEntity);
 
         IdentityProviderConfig onboardingSameTransactionEntityIdp = anIdentityProviderConfigData()
-                .withOnboarding(ImmutableList.of(transactionEntity))
+                .withOnboarding(List.of(transactionEntity))
                 .build();
 
-        assertThat(onboardingPredicate.apply(onboardingSameTransactionEntityIdp)).isTrue();
+        assertThat(onboardingPredicate.test(onboardingSameTransactionEntityIdp)).isTrue();
     }
 
     @Test
     public void shouldBeFalseForOnboardingDifferentTransactionEntity() {
         String transactionEntity = "transactionEntity";
-        List<String>  differentTransactionEntity = ImmutableList.of("differentTransactionEntity");
+        List<String> differentTransactionEntity = List.of("differentTransactionEntity");
         Predicate<IdentityProviderConfig> onboardingPredicate = new OnboardingForTransactionEntityPredicate(transactionEntity);
 
         IdentityProviderConfig onboardingDifferentTransactionEntityIdp = anIdentityProviderConfigData()
                 .withOnboarding(differentTransactionEntity)
                 .build();
 
-        assertThat(onboardingPredicate.apply(onboardingDifferentTransactionEntityIdp)).isFalse();
+        assertThat(onboardingPredicate.test(onboardingDifferentTransactionEntityIdp)).isFalse();
     }
 }
